Update content, update pages

--- a/content/articles/2017-09-11-software.md
+++ b/content/articles/2017-09-11-software.md
@@ -1,7 +1,8 @@
 ---
 title: Software entwickeln ist wie die Erforschung eines bisher unentdeckten Höhlennetzes.
 draft: false
-author: Christoph Hochstrasser
+author:
+  name: Christoph Hochstrasser
 lede: Warum lineare Pläne nicht funktionieren. Eine Metapher.
 ---
 
