--- a/content/bettercast/2017-09-30-ep-1.md
+++ b/content/bettercast/2017-09-30-ep-1.md
@@ -1,11 +1,16 @@
 ---
-title: Episode 1
+title: "1: Peter Wagner"
+season: 1
+episodeNumber: 1
 enclosure:
-  url: https://…
+  url: "https://assets.better.co.at/bettercast/Intro2.mp3"
 appearances:
 - name: Christoph Hochstrasser
   role: host
-- name: Max Mustermann
+  twitter: hochchristoph
+  facebook: foo
+  website: foo
+- name: Peter Wagner
   role: guest
 ---
-
+Peter Wagner arbeitet bei der Firma Engel in St. Valentin als Projektmanager und Product Owner in einem Scrum Team.
