--- a/content/bettercast/2017-09-30-ep-1.md
+++ b/content/bettercast/2017-09-30-ep-1.md
@@ -1,5 +1,5 @@
 ---
-title: "1: Peter Wagner"
+title: "1: Max Mustermann"
 season: 1
 episodeNumber: 1
 enclosure:
@@ -8,9 +8,8 @@ appearances:
 - name: Christoph Hochstrasser
   role: host
   twitter: hochchristoph
-  facebook: foo
-  website: foo
-- name: Peter Wagner
+- name: Max Mustermann
   role: guest
+  website: https://example.com
 ---
-Peter Wagner arbeitet bei der Firma Engel in St. Valentin als Projektmanager und Product Owner in einem Scrum Team.
+Max Mustermann arbeitet bei der Firma Muster in Musterstadt als Projektmanager und Product Owner in einem Scrum Team.
