--- a/content/bettercast/2017-09-30-ep-1.md
+++ b/content/bettercast/2017-09-30-ep-1.md
@@ -4,6 +4,9 @@ season: 1
 episodeNumber: 1
 enclosure:
   url: "https://assets.better.co.at/bettercast/Intro2.mp3"
+  type: "audio/mpeg"
+  length: 109052
+duration: "00:13"
 appearances:
 - name: Christoph Hochstrasser
   role: host
