Use empty podcast, add license

--- a/content/bettercast/2017-09-30-ep-1.md
+++ b/content/bettercast/2017-09-30-ep-1.md
@@ -14,5 +14,6 @@ appearances:
 - name: Max Mustermann
   role: guest
   website: https://example.com
+draft: true
 ---
 Max Mustermann arbeitet bei der Firma Muster in Musterstadt als Projektmanager und Product Owner in einem Scrum Team.
